add turso repositories